# passive-liquidity-aptos

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
app/: .env.example  docker-compose.yml  package.json  pnpm-lock.yaml  svelte.config.js
app/.storybook/: preview.ts
app/src/: app.css  app.html
app/src/lib/: utils.ts
app/src/lib/assets/openapi/: api-1.json
app/src/lib/data/: dexes.ts
app/src/lib/remote/: pools.remote.ts
app/src/lib/server/: manager-auth.ts  manager-service.ts  volatility.ts
app/src/lib/server/db/: index.ts  manager.ts  schema.ts  seed-demo.ts
app/src/lib/shared/: api.ts  aptos.ts  config.ts  index.ts  tapp-sdk.ts
app/src/lib/shared/manager/: index.ts
app/src/lib/shared/tapp/: api.ts  sdk.ts  types.ts  utils.ts
app/src/lib/types/: openapi.d.ts  token-list.ts
app/src/lib/user/: user-state.svelte.ts
app/src/lib/wallet/: wallet.svelte.ts
app/src/lib/wallet/components/: wallet-button.stories.svelte  wallet-button.svelte
app/src/routes/: +layout.svelte
app/src/routes/(earn)/: +page.svelte  earn.remote.ts
app/src/routes/(earn)/pools/: +page.svelte  data.remote.ts  pools.remote.ts
app/src/routes/(earn)/vaults/: +page.svelte  data.remote.ts
app/src/routes/assets/: +page.svelte
app/src/routes/money-market/: +page.svelte  meso.types.ts  money-market.remote.ts  money-market.types.ts  shared.ts
app/src/routes/profile/: +page.server.ts  +page.svelte  manager.remote.ts
app/src/routes/test/: +page.svelte
app/static/: site.webmanifest
move/: Move.toml
rust/: Cargo.toml  DEX_RESEARCH.md
rust/api/: Cargo.toml
rust/api/src/: errors.rs  main.rs  routes.rs
rust/api/src/chains/: handlers.rs  mod.rs
rust/api/src/hyperion/: handlers.rs  mod.rs
rust/api/src/models/: chain.rs  mod.rs  protocol.rs
rust/api/src/pools/: handlers.rs  mod.rs
rust/api/src/pools/jobs/: handlers.rs  mod.rs
rust/api/src/positions/: handlers.rs
rust/api/src/routes/chains/: handlers.rs
rust/api/src/routes/exchanges/: handlers.rs  mod.rs
rust/api/src/routes/pools/: handlers.rs  mod.rs
rust/api/src/routes/pools/jobs/: handlers.rs
rust/api/src/routes/positions/: handlers.rs  mod.rs
rust/api/src/routes/protocols/: handlers.rs  mod.rs
rust/api/src/routes/tokens/: handlers.rs
rust/api/src/tokens/: mod.rs
rust/crates/db/: Cargo.toml
rust/crates/db/src/: lib.rs
rust/crates/db/src/entities/: chains.rs  managed_positions.rs  mod.rs  pools.rs  positions.rs  prelude.rs  protocols.rs  sea_orm_active_enums.rs  tokens.rs  user_balances.rs  user_movements.rs  users.rs
rust/scrapers/common/: Cargo.toml
rust/scrapers/common/src/: lib.rs
rust/scrapers/hyperion/: Cargo.toml
rust/scrapers/hyperion/src/: api.rs  lib.rs  scraper.rs  types.rs
rust/scrapers/tapp/: Cargo.toml
rust/scrapers/tapp/src/: api.rs  chain.rs  lib.rs  main.rs  scraper.rs  types.rs
rust/scrapers/tapp/src/api/: api.rs  models.rs
rust/scrapers/thala/: Cargo.toml
rust/scrapers/thala/src/: api.rs  lib.rs  scraper.rs  types.rs
scripts/: generate-entities.sh
(+45 files in other folders)
