[workspace]
members = [
    "crates/*",
    "api",
    "scrapers/*",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
aptos-rust-sdk = { git = "https://github.com/aptos-labs/aptos-rust-sdk", branch = "main" }
aptos-rust-sdk-types = { git = "https://github.com/aptos-labs/aptos-rust-sdk", branch = "main" }
anyhow = "1.0.100"