[workspace]
members = [
    "crates/*",
    "api",
    "scrapers/*",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
aptos-rust-sdk = { git = "https://github.com/aptos-labs/aptos-rust-sdk", branch = "main" }
aptos-rust-sdk-types = { git = "https://github.com/aptos-labs/aptos-rust-sdk", branch = "main" }
anyhow = "1.0.100"
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc.13", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
rust_decimal = "1.39.0"