[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sqlx = "0.8.6"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0.145"
dotenvy.workspace = true
tapp = {path = "../scrapers/tapp"}