[package]
name = "tapp"
version = "0.1.0"
edition = "2024"


[dependencies]
aptos-rust-sdk.workspace = true
aptos-rust-sdk-types.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal.workspace = true
scraper-common = { path = "../common" }
db = { path = "../../crates/db" }
sea-orm.workspace = true
